[package]
name = "jpbank"
version = "0.1.0"
authors = ["mtwtkman <punipuniomochi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
select = "0.5"
futures = "0.3"